@@ -1,5 +1,7 @@
 2010-07-14  Meteor Liu  <meteor1113@gmail.com>
 
+	* init-site.el: Add custom-autoload for cedet in emacs-21.
+
 	* init-misc.el: Add line-number-at-pos for drag-stuff.
 	Emacs-21 can't use eim.
 	Don't use drag-stuff in emacs-21.
